<resources>
    <string name="app_name">Electricity meters viewer</string>
    <string name="hello_world">Hello world</string>
    <string name="menu_title_settings">Settings</string>
    <string name="menu_title_search">Search</string>
    <string name="searchable_hint">Type contract number here...</string>
    <string name="text_sector_number">Sect: %d</string>
    <string name="text_contract_number">Contract №: %s</string>
    <string name="text_counters_factory_number">S/N:</string>
    <string name="text_counters_contract_number">Contract:</string>
    <string name="text_counters_value">Val:</string>
    <string name="text_pick_a_date">Choose a date</string>
    <string name="text_date_from">From:&lt;b>%1$s&lt;/b></string>
    <string name="text_date_to">To:&lt;b>%1$s&lt;/b></string>
    <string name="text_date_period">Period %1$s - %2$s</string>
    <string name="contact_info_detail_activity">Contract in details</string>
    <string name="pref_url_title">Connection URL</string>
    <string name="pref_url_summary">URL: %1$s</string>
    <string name="pref_user_title">User</string>
    <string name="pref_user_summary">User: %1$s</string>
    <string name="pref_password_title">Password</string>
    <string name="pref_password_summary">Password</string>
    <string name="pref_connection_title">Connection settings</string>
    <string name="pref_search_variant">Search variant</string>
    <string name="pref_search_variant_summary">Search by: %1$s</string>
    <string name="pref_begin_date_title">Begin date for report</string>
    <string name="pref_begin_date_summary">Value: %1$s</string>
    <string name="pref_begin_date_ok_button">OK</string>
    <string name="pref_begin_date_cancel_button">Cancel</string>
    <string name="pref_begin_date_default_value">01/12/2017</string>
    <string name="pref_search_variant_default">By contract number</string>
    <string name="contract_info_detail_tab_common">Common</string>
    <string name="contract_info_detail_tab_counter_history">Counter values history</string>
    <string name="contract_info_detail_tab_payment_history">Payment history</string>


    <string-array name="search_variant_titles">
        <item name="1">By contract number</item>
        <item name="2">By counter number</item>
        <item name="3">By client description</item>
    </string-array>

    <string name="text_counter_info_label">Current counter\'s values:</string>
    <string name="text_counter">S/N:</string>
    <string name="text_counter_info_credit">Current credit info:</string>
    <string name="text_client_info_label">Client info:</string>

    <string name="text_common_info_address">Address: %1$s</string>
    <string name="text_common_info_telephone">Telephone: %1$s</string>
    <string name="text_common_info_individual_number">Ind.Number: %1$s</string>
    <string name="text_kvt">Kvt</string>
    <string name="text_payments_header_period">Period</string>
    <string name="text_payments_header_counter">Counter</string>
    <string name="text_payments_header_accrued">Accrued</string>
    <string name="text_payments_header_paidfor">Paid for</string>
    <string name="menu_title_consuming">Consuming by sectors</string>
    <string name="text_consuming_sector_number">Sector number: %1$s</string>
    <string name="text_consuming_value">%1$s (Kvt)</string>
    <string name="period_button_text">Choose period...</string>
    <string name="check_date_empty_date">05.12.2020</string>

    <string name="check_date_Checked">Chk: %1$s</string>
    <string name="pref_check_date_month">Value: %1$s</string>
    <string name="pref_check_date_month_title">Months to check</string>
    <string name="pref_check_date_month_summary">Months: %1$s</string>


</resources>
