<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="pref_search_variant"
        android:title="@string/pref_search_variant"
        android:summary="@string/pref_search_variant_summary"
        android:dialogTitle="@string/pref_search_variant"
        android:entries="@array/search_variant_titles"
        android:entryValues="@array/search_variant_titles"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:defaultValue="@string/pref_search_variant_default"/>


    <compsevice.ua.app.activity.DatePickerPreference
        android:key="pref_begin_date"
        android:title="@string/pref_begin_date_title"
        android:summary="@string/pref_begin_date_summary"
        android:defaultValue="@string/pref_begin_date_default_value"/>

    <PreferenceCategory
        android:key="pref_connection"
        android:title="@string/pref_connection_title"
        android:icon="@android:drawable/ic_menu_view"
        >

        <EditTextPreference
            android:key="pref_url"
            android:title="@string/pref_url_title"
            android:summary="@string/pref_url_summary"
            android:defaultValue="http://194.44.128.140:9090/demo/hs/"/>
        <EditTextPreference
            android:key="pref_user"
            android:title="@string/pref_user_title"
            android:summary="@string/pref_user_summary"
            android:defaultValue="service"/>

        <EditTextPreference
            android:key="pref_password"
            android:title="@string/pref_password_title"
            android:password="true"
            android:defaultValue="fake password"/>

    </PreferenceCategory>


</PreferenceScreen>